# LMECA2660

./: .gitignore  README.md
Homework/: CMakeLists.txt  README.md
Homework/matlab/: analysis.m  plot_data.m
Homework/matlab/data/: DS.txt  E2.txt  E4.txt  I4.txt  I6.txt  global_diagnostics.txt  u.txt
Homework/matlab/data/convection/: glob_125_ds.txt  glob_125_e2.txt  glob_125_e4.txt  glob_125_i4.txt  glob_125_i6.txt  glob_25_ds.txt  glob_25_e2.txt  glob_25_e4.txt  glob_25_i4.txt  u_5.txt  (+20 more)
Homework/matlab/data/convection-diffusion/: glob_125_ds.txt  glob_125_e2.txt  glob_125_e4.txt  glob_125_i4.txt  glob_25_ds.txt  glob_25_e2.txt  glob_25_e4.txt  glob_25_i4.txt  glob_25_i6.txt  glob_5_ds.txt  glob_5_e2.txt  glob_5_e4.txt  glob_5_i4.txt  glob_5_i6.txt  u_125.txt  u_5.txt  uh_125_ds.txt  uh_125_e2.txt  uh_125_e4.txt  uh_125_i4.txt  uh_25_ds.txt  uh_25_e2.txt  uh_25_e4.txt  uh_25_i4.txt  uh_25_i6.txt  uh_5_ds.txt  uh_5_e2.txt  uh_5_e4.txt  uh_5_i4.txt
Homework/src/: main.c
Homework/src/solver/: solver.c  solver.h  thomas.c  thomas.h
Project/: CMakeLists.txt  Makefile  README.md  airfoil.cpp  airfoil.h  main.py  polynomial_interpolation.py  run_project.sh
Project/airfoil/: diag_aoa_00.txt  diag_aoa_15.txt  diag_aoa_20.txt  diag_aoa_30.txt  diag_aoa_5.txt  diag_aoa_50.txt  diag_aoa_60.txt  diag_aoa_70.txt  diag_aoa_80.txt  diag_aoa_90.txt
Project/airfoil/10/: diagnostics.txt
Project/airfoil/25/: diagnostics.txt
Project/airfoil/40/: diagnostics.txt
Project/data/: plot_data.m  plot_data.m~
Project/inc/: airfoil.h  const.h  cylinder.h  debug.h  mesh.h  poisson.h  solver.h
Project/src/: airfoil.cpp  cylinder.c  debug.c  main.c  mesh.c  poisson.c  project.c  solver.c
Project/utils/: differentiate_methods.py  manufactured_solutions.py  strouhal.py
